# itmo-practice3

./: Dockerfile  graph.csv  graph.html  pyproject.toml  terms.csv  terms.html
src/: main.py  routes.py
