[tool.poetry]
name = "practice3"
version = "0.1.0"
description = ""
authors = ["Ainur Rakhmanov <ainur-205@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
